test/embedded/weak-unowned.code
// RUN: %target-language-emit-ir %s -wmo
// RUN: %target-language-emit-ir %s -enable-experimental-feature Embedded -verify

// REQUIRES: language_in_compiler
// REQUIRES: optimized_stdlib
// REQUIRES: OS=macosx || OS=linux-gnu
// REQUIRES: language_feature_Embedded

public class MyClass { }

public struct MyStruct {
  var normalVar: MyClass
  weak var weakVar: MyClass? // expected-error {{attribute 'weak' cannot be used in embedded Codira}}
  unowned var unownedVar: MyClass // expected-error {{attribute 'unowned' cannot be used in embedded Codira}}
  unowned(unsafe) var unownedUnsafe: MyClass
}
